--- a/about.html
+++ b/about.html
@@ -74,20 +74,27 @@
             </header>
         </div>
 
-        <div id="app" class="container mt-5">
-            <h2 class="mb-4">文章列表</h2>
+        <div id="app" class="container py-5">
+            <h2 class="mb-4 text-center">📚 文章列表</h2>
 
-            <div v-if="loading" class="alert alert-info">加载中...</div>
-            <div v-if="error" class="alert alert-danger">{{ error }}</div>
+            <div v-if="loading" class="alert alert-info text-center">加载中...</div>
+            <div v-if="error" class="alert alert-danger text-center">{{ error }}</div>
 
-            <div v-if="posts.length > 0" class="list-group">
-                <a v-for="post in posts" :key="post.id" href="#" class="list-group-item list-group-item-action">
-                    <h5 class="mb-1">{{ post.title }}</h5>
-                    <p class="mb-1 text-muted">{{ post.content }}</p>
-                </a>
+            <div v-if="posts.length > 0" class="row g-4">
+                <div class="col-md-6 col-lg-4" v-for="post in posts" :key="post.id">
+                    <div class="card h-100 shadow-sm">
+                        <div class="card-body">
+                            <h5 class="card-title">{{ post.title }}</h5>
+                            <p class="card-text text-muted text-truncate">{{ post.content }}</p>
+                        </div>
+                        <div class="card-footer bg-transparent border-0 text-end">
+                            <a href="#" class="btn btn-outline-primary btn-sm">阅读更多</a>
+                        </div>
+                    </div>
+                </div>
             </div>
 
-            <div v-if="!loading && posts.length === 0" class="alert alert-warning">暂无文章</div>
+            <div v-if="!loading && posts.length === 0" class="alert alert-warning text-center">暂无文章</div>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
@@ -105,29 +112,6 @@
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
     <script type="module">
-        // import { createApp, ref } from 'https://unpkg.com/vue@3/dist/vue.esm-browser.js'
-
-        // createApp({
-        //     setup() {
-        //         const message = ref('这是关于页面')
-        //         const webinfo = ref({})
-        //         const url = "https://wumacms.github.io/bootstrap5_tech_gears/webinfo.json"
-        //         // 为给定 ID 的 user 创建请求
-        //         axios.get(url)
-        //             .then(function (res) {
-        //                 webinfo.value = res.data;
-        //             })
-        //             .catch(function (err) {
-        //                 console.log(err);
-        //             });
-
-        //         return {
-        //             message, webinfo
-        //         }
-        //     }
-        // }).mount('#app')
-
-
         import { createApp, ref, onMounted } from 'https://unpkg.com/vue@3/dist/vue.esm-browser.js'
         import postsApi from './posts.js'
 
